@@ -3,7 +3,7 @@ Contributors: Otto42, pross, poena, dingo-d, acosmin, kafleg, joyously
 Requires at Least: 3.7
 Tested Up To: 6.2
 Tags: themes, guidelines, wordpress.org
-Stable tag: 20230412
+Stable tag: 20230417
 
 A simple and easy way to test your theme for all the latest WordPress standards and practices. A great theme development tool!
 
