@@ -4,7 +4,7 @@
  * Plugin URI: https://github.com/WordPress/theme-check/
  * Description: A simple and easy way to test your theme for all the latest WordPress standards and practices. A great theme development tool!
  * Author: Theme Review Team
- * Version: 20230412
+ * Version: 20230417
  * Text Domain: theme-check
  * License: GPLv2
  * License URI: https://www.gnu.org/licenses/gpl-2.0.html
